# OHM

./: .gitignore  AGENTS.md  BEADS.md  CLAUDE.md  Caddyfile  DOLT_REMOTE.md  LICENSE  Makefile  OHM_MULTI_TENANCY_BACKLOG.md  PM_BRIEF.md  PM_UPDATE.md  README.md  VISION.md  debug_mc.py  debug_prob.py  manifest  mypy.ini  ohmd.service  opencode.json  pyproject.toml  rebuild_from_ducklake.py  reseed_ohm.py  seed_agent_security_cluster.py  test_env_leak.py  test_pk.py  test_update.py
.beads/: .auto-import-issues.jsonl  .gitignore  BACKLOG.md  config.yaml  interactions.jsonl  issues.jsonl  metadata.json  sqlite  sqlite-shm  sqlite-wal
.beads/backup/: backup_state.json  manifest
.beads/export-state/: 04bed430eecbe7fd.json
.github/: dependabot.yml
.github/skills/duckdb/: SKILL.md
.github/workflows/: ohmd-smoke.yml  release.yml  test.yml
.opencode/: opencode.json
.opencode/agents/: README.md  ohm-adr-writer.md  ohm-plumber.md  ohm-researcher.md  ohm-schemer.md  ohm-test-writer.md
deploy/: setup-mcp-sidecar.ps1  setup-mcp-sidecar.sh
deploy/systemd/: ohm-mcp@.service
docs/: agent-onboarding.md  agent-relationship-challenges.md  agent-relationships.md  beef-herd-scenario.md  bootstrap.md  cattle-scenario.md  cli.md  cognitive-guide.md  crash-recovery-notes.md  customer-support-scenario.md  cybersecurity-scenario.md  decision-nodes.md  deployment.md  domain-configs.md  domain-extensions.md  ducklake.md  edge-type-guide.md  industrial-agent-manifesto.md  integration-patterns.md  l0-backlog.md  l0-design-critique.md  l0-design.md  markov-feasibility.md  medical-scenario.md  migrating-from-legacy-topo-mapping.yaml  migrating-from-legacy-topo.md  multi_tenancy_ops.md  new-team-onboarding.md  retail-scenario.md  roadmap.md  scenarios.md  schema.md  security-review-2026-07-02.md  substrate-methods.md  substrate-services.md  supply-chain-scenario.md  upgrade_multi_tenancy.md  utility_data_gap.md  verification-layers-synthesis.md
docs/adr/: 0001-architecture-decisions.md  0004-per-agent-local-cache.md  0007-schema-evolution-and-type-governance.md  0013-value-of-information.md  0014-agent-task-routing.md  0015-multi-tenancy.md  0015-source-citation-architecture.md  0016-quack-production-readiness.md  0017-encryption-at-rest.md  0028-source-tier-architecture.md  0029-consensus-verification-loops.md  0030-oppositional-review-pipeline.md  0031-hd-fingerprint-prototype.md  0032-hd-membership-layer.md  0033-source-diversity-score.md  0034-emerging-concept-detection.md  0035-telos-signing.md  0036-suggestions-lifecycle.md  0037-read-scopes-temporal-pinning.md  0038-temporal-planning-mcp-tools.md  0039-bedrock-knowledge-store.md  0040-topo-observation-lifecycle.md  0041-temporal-event-model.md  0042-instance-registry-monitoring.md  0043-agent-profiles-tenants.md  0044-correction-workflow-supersession.md  ADR-016-staged-ingestion-pipeline.md  ADR-018_verification_loops.md  ADR-019-l0-thinking-layer.md  ADR-020-quack-dynamic-scaling.md  ADR-021-intelligent-tagging.md  ADR-022-first-run-standup.md  ADR-022-layer-promotion-constraints.md  ADR-025-ask-challenge-binary.md  ADR-026-context-gates.md  ADR-027-bos-odps-catalog-schema.md  ADR-028-hosted-mcp-gateway.md  ADR-029-toon-mcp-transport.md  ADR-041-temporal-event-model.md  README.md
docs/agent-writing/: PROTOCOL.md
docs/benchmarks/: README.md  pure-python-loop-audit.md
docs/deployment/: local-copilot-ohm.md  per-agent-ohm.md  remote-copilot-ohm.md  single-project-ohm.md  windows-copilot-ohm.md
docs/design/: capability-batch-2026-07-08.md  deployment-guide-2026-07-08.md  efficiency-batch-2026-07-08.md  ohm-agent-profiles-2026-07-08.md  ohm-claude-review-fixes-2026-07-08.md  typecheck-batch-2026-07-08.md
docs/examples/: topo-legacy-migration-extension.json
docs/test-reports/: 2026-06-30_live_daemon_followup.md  2026-06-30_live_daemon_test_report.md
docs/testing/: adversarial-scenarios.md  agent-test-runbook.md  ohm-agent-test-runbook.md  ohm-feature-coverage.md
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: _spike_hd_sql.py  agent-test.py  backfill_challenge_reasons.py  cleanup_test_artifacts.py  deploy_ohmd.sh  embed_batch.sh  embed_ranch_only.sh  ensure_mc_rust.sh  extract_cluster.py  migrate_topo_reports.py  print_source_created.py  source_citation_backfill.py
scripts/ingestion/: ingestion_pipeline.py  karakeep_to_ohm.py
scripts/spikes/: ohm_seed_template_spike.py  ohm_standup_spike.py  ohm_toon_benchmark_spike.py
skills/ohm/: SKILL.md
src/ohm/: __init__.py  bayesian.py  boundary.py  causal_refutation.py  cli.py  client.py  contract.py  db.py  evidence.py  exceptions.py  game.py  graph.py  graph_reader.py  hd.py  hooks.py  hooks_builtin.py  ingest.py  integrations.py  marimo_pair.py  markov.py  mc.py  methods.py  metis_bridge.py  net_safety.py  patterns.py  pert.py  quack.py  queries.py  query.py  schema.py  sdk.py  semantic_roles.py  server.py  store.py  tenant.py  utils.py  validation.py  visualization.py
src/ohm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ohm/bos/: __init__.py  odps_validation.py
src/ohm/cli/: standup.py  (+2 more)
tests/: conftest.py  test_admin_verification_scan_503.py  test_agent_calibration.py  test_agent_onboarding.py  test_agent_profile.py  test_agora_nudges.py  test_ask_endpoint.py  test_ask_router_extensions.py  test_ask_routing.py  test_auto_pert.py  test_backend_introspection.py  test_batch_fast.py  test_bayesian.py  test_bayesian_adr.py  test_bayesian_context.py  test_bayesian_sensitivity.py  test_beads_sync.py  test_beads_sync_server.py  test_bedrock_document_handler.py  test_bedrock_knowledge_store.py  test_belief_enhancements.py  test_benchmarks.py  test_bootstrap.py  test_bos_pilot.py  test_bos_products.py  test_boundary.py  test_bug_y2i_19.py  test_bug_y2i_20.py  test_calibration.py  test_chain_validity.py  test_challenge_backfill.py  test_challenge_edge_fix.py  test_challenge_ratio_925.py  test_cleanup_artifacts.py  test_cleanup_script.py  test_cli.py  test_cli_integration.py  test_concurrency_guard_955.py  test_concurrent.py  test_concurrent_inference.py  (+210 more)
(+217 files in other folders)
