[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohm"
version = "0.1.0"
description = "Shared awareness, individual judgment. Multi-agent knowledge graph."
authors = [
    {name = "Matt Markham"},
    {name = "Métis"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.5.2",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[project.scripts]
ohm = "ohm.cli:main"
ohmd = "ohm.server:main"
topo = "ohm.cli:topo_main"
topod = "ohm.server:topod_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"
markers = [
    "benchmark: Performance benchmark tests (pytest-benchmark)",
    "slow: Tests that take >1s (excluded from fast CI runs)",
]

[tool.pytest-benchmark]
# CI-friendly defaults — reduce rounds for faster feedback.
# For dedicated benchmark runs, override with:
#   pytest --benchmark-min-rounds=50 --benchmark-max-time=5.0
min_rounds = 5
max_time = 1.0
timer = "time.perf_counter"
disable_gc = true