[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohm"
version = "0.27.0"
description = "Shared awareness, individual judgment. Multi-agent knowledge graph."
authors = [
    {name = "Matt Markham"},
    {name = "Métis"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.2",
    "click>=8.0",
    "pytz",
    "pyyaml>=6.0",
    "jsonschema>=4.18",
]

[project.optional-dependencies]
bayesian = [
    "pgmpy>=0.9",
    "networkx>=3.0",
]
causal = [
    "dowhy>=0.11",
]
ingestion = [
    "beautifulsoup4>=4.12",
]
markov = [
    "numpy>=1.24",
]
science = [
    "ohm[bayesian,causal,markov]",
]
dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
     "pytest-benchmark>=4.0",
     "pytest-xdist>=3.0",
     "pytest-timeout>=2.0",
     "ruff>=0.3.0",
     "mypy>=1.8.0",
     "requests>=2.28.0",
     "beautifulsoup4>=4.12",
 ]

[tool.ruff]
target-version = "py312"
line-length = 260

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**" = ["F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ohm.bayesian", "ohm.sdk"]
ignore_errors = true

[project.scripts]
ohm = "ohm.cli:main"
ohmd = "ohm.server:main"
ohm-mcp = "ohm.mcp.server:cli_main"
topo = "ohm.cli:topo_main"
topod = "ohm.server:topod_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ohm.graph" = ["templates/*.json"]
"ohm.bos" = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--timeout=120 --timeout-method=thread"
markers = [
    "benchmark: Performance benchmark tests (pytest-benchmark)",
    "slow: Tests that take >1s (excluded from fast CI runs)",
    "integration: HTTP server integration tests (excluded from fast CI runs)",
    "concurrent: Thread-safety tests (platform-sensitive, excluded from CI)",
    "xdist_group: xdist group for server test isolation",
]

[tool.pytest-benchmark]
# CI-friendly defaults — reduce rounds for faster feedback.
# For dedicated benchmark runs, override with:
#   pytest --benchmark-min-rounds=50 --benchmark-max-time=5.0
min_rounds = 5
max_time = 1.0
timer = "time.perf_counter"
disable_gc = true