[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohm"
version = "0.27.0"
description = "Shared awareness, individual judgment. Multi-agent knowledge graph."
authors = [
    {name = "Matt Markham"},
    {name = "Métis"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "click>=8.0",
    "pytz",
    "pyyaml>=6.0",
    "jsonschema>=4.18",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34.0",
]
bayesian = [
    "pgmpy>=0.9",
    "networkx>=3.0",
]
causal = [
    "dowhy>=0.11",
]
ingestion = [
    "beautifulsoup4>=4.12",
    "markdown>=3.6",
]
markov = [
    "numpy>=1.24",
    "scipy>=1.10",
]
toon = [
    "python-toon>=0.1.3",
]
gateway = [
    "fastmcp[tasks]>=3.0",
    "httpx>=0.27",
    "python-toon>=0.1.3",
]
science = [
    "ohm[bayesian,causal,markov]",
]
dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
     "pytest-benchmark>=4.0",
     "pytest-xdist>=3.0",
     "pytest-timeout>=2.0",
     "ruff>=0.3.0",
     "mypy>=1.8.0",
     "requests>=2.28.0",
     "beautifulsoup4>=4.12",
     "markdown>=3.6",
     "moto>=5.0",
     "python-toon>=0.1.3",
     "anyio>=4.0",
     "pytest-asyncio>=0.23",
 ]
rust = [
     "maturin>=1.4",
 ]

[tool.maturin]
manifest-path = "rust/Cargo.toml"
module-name = "ohm._mc_rust"
python-source = "src"

[tool.ruff]
target-version = "py313"
line-length = 260

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**" = ["F401", "F811"]
"reseed_ohm.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ohm.bayesian", "ohm.sdk"]
ignore_errors = true

[project.scripts]
ohm = "ohm.cli:main"
ohmd = "ohm.server:main"
ohm-mcp = "ohm.mcp.server:cli_main"
ohm-gateway = "ohm.mcp.gateway:cli_main"
topo = "ohm.cli:topo_main"
topod = "ohm.server:topod_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ohm.graph" = ["templates/*.json"]
"ohm.bos" = ["data/*.json"]
"ohm.mcp" = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --dist loadgroup --timeout=120 --timeout-method=thread -m 'not slow and not benchmark and not performance and not integration'"
markers = [
    "benchmark: Performance benchmark tests (pytest-benchmark)",
    "performance: Latency-gated performance tests (p95 thresholds, OHM-c1id)",
    "slow: Tests that take >1s (excluded from fast CI runs)",
    "integration: HTTP server integration tests (excluded from fast CI runs)",
    "concurrent: Thread-safety tests (platform-sensitive, excluded from CI)",
    "smoke: Live-daemon smoke tests (spawns ohm.server subprocess)",
    "xdist_group: xdist group for server test isolation",
    "asyncio: marks tests as async (requires pytest-asyncio)",
    "anyio: marks tests as anyio-compatible (requires anyio pytest plugin)",
    "adversarial: adversarial/stress tests (may trigger unusual code paths)",
]

[tool.pytest-benchmark]
# CI-friendly defaults — reduce rounds for faster feedback.
# For dedicated benchmark runs, override with:
#   pytest --benchmark-min-rounds=50 --benchmark-max-time=5.0
min_rounds = 5
max_time = 1.0
timer = "time.perf_counter"
disable_gc = true