[package]
name = "ohm-mc"
version = "0.1.0"
edition = "2021"
description = "Rust PyO3 extension for OHM Monte Carlo simulations"

[lib]
name = "_mc_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
rustc-hash = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
